[package]
name = "es"
version = "0.1.0"
authors = ["Rinsu Su <srs@surindaku.dev>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "es"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
avr-device = { version = "0.8.1", features = ["atmega2560"] }
smart-leds = "0.4.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
